--- a/Bomberman/Bomberman.csproj
+++ b/Bomberman/Bomberman.csproj
@@ -46,6 +46,10 @@
     <Compile Include="GameWorld.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Upgrades\BombCapacity.cs" />
+    <Compile Include="Upgrades\BombRange.cs" />
+    <Compile Include="Upgrades\FasterMovement.cs" />
+    <Compile Include="Upgrades\Upgrade.cs" />
   </ItemGroup>
   <ItemGroup>
     <Reference Include="MonoGame.Framework">
