--- a/Bomberman/Bomberman.csproj
+++ b/Bomberman/Bomberman.csproj
@@ -44,6 +44,9 @@
     <Compile Include="Game1.cs" />
     <Compile Include="GameContent.cs" />
     <Compile Include="GameWorld.cs" />
+    <Compile Include="GraphicalElements\Box.cs" />
+    <Compile Include="GraphicalElements\GraphicalElement.cs" />
+    <Compile Include="Position.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Upgrades\BombCapacity.cs" />
